test/bad/generics/print02.px

func f<Any T>(T x) def
    print 'x', x
